# azion-examples

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
add-edge-function/: add.wat  factorial.wasm  factorial.wat  worker.js
basic-edge-function/: README.md  package-lock.json  package.json
basic-edge-function/js/: bootstrap.js
cpp-function/: build.sh
cpp-function/src/: hello.cpp  main.cpp
src/: lib.rs
vulcan-ssr-function/: README.md
yew-ssr-function/: README.md  package.json  webpack.config.js
yew-ssr-function/src/: lib.rs
